fix gallery style overflow

--- a/assets/styles/crisp.css
+++ b/assets/styles/crisp.css
@@ -303,10 +303,8 @@ footer a:hover {
 
 .kg-width-wide {
   position: relative;
-  width: 85vw;
   min-width: 100%;
   margin: auto calc(50% - 50vw);
-  transform: translateX(calc(50vw - 50%));
 }
 
 .kg-width-full {
